<resources xmlns:tools="http://schemas.android.com/tools"
    tools:locale="sr">

    <string name="navigation_bar_open">Open navigation bar</string>
    <string name="navigation_bar_close">Close navigation bar</string>
    <string name="app_name">SPARKS</string>
    <string name="action_settings">Settings</string>
    <string name="nameValue" translatable="false" />
    <string name="name">name</string>
    <string name="hint1">Broj registarskih tablica: </string>
    <string name="hint2">Izaberite vrijeme: </string>
    <string name="zone_filter">Pretraga po zonama </string>
    <string name="settings">Podešavanja</string>
    <string name="title_activity_settings">Settings</string>
    <string name="choose_language">Srpski</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <string name="zone_title">Zona</string>

    <string name="about_app">O aplikaciji</string>

    <string name="how_to_use">Uputstvo za upotrebu</string>

    <string name="language_title">Jezik</string>
    <string name="warning_title">Prijavite problem</string>
    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="home_string">Početni ekran</string>
    <string name="profile_string">Podešavanja profila</string>
    <string name="settings_string">Podešavanja</string>
    <string name="manual_string">Uputstvo za upotrebu</string>
    <string name="report_string">Prijavite grešku</string>
    <string name="about_string">O aplikaciji</string>
    <string name="sparks">SPARKS</string>
    <string name="welcome">Dobrodošli</string>
    <string name="misc">Ostalo</string>
    <string name="error_info">Unesite opis greške</string>
    <string name="color_title">Izaberite glavnu boju aplikacije</string>
    <string name="parking1">Parking1</string>
    <string name="parking3">Parking3</string>
    <string name="parking2">Parking2</string>
    <string name="logovi">Logovi</string>
    <string name="half_hour">30min</string>
    <string name="one_hour">1h</string>
    <string name="two_hours">2h</string>
    <string name="three_hours">3h</string>
    <string name="four_hours">4h</string>
    <string name="_15min">15min</string>
    <string name="_10min">10min</string>
    <string name="_5min">5min</string>
    <string name="_20min">20min</string>
    <string name="_30min">30min</string>
    <string name="price">Cijena</string>
    <string name="parking_name">Ime parkinga</string>
    <string name="parking_time">Period zauzeća</string>
    <string name="parking_load">Trenutno zauzeće</string>
    <string name="duration_5m">Period: 5m</string>
    <string name="duration_1h">Period: 1h</string>
    <string name="book_parking">Rezervišite parking</string>
    <string name="parking_duration">Izaberite period rezervacije</string>
    <string name="remaining_time">Preostalo vrijeme na parkingu</string>
    <string name="reduction_time">Izaberite period skraćenja</string>
    <string name="information">Informacije</string>
    <string name="blue">Plava</string>
    <string name="red">Crvena</string>
    <string name="green">Zelena</string>
    <string name="pink">Roza</string>
    <string name="yellow">Žuta</string>

    <string name="info">Upravljanje informacijama</string>
    <string name="gen_info">Opšte upravljanje</string>
    <string name="all">Sve</string>

    <string name="default_parking">Podrazumijevani parking</string>
    <string name="default_duration">Podrazumijevani period zauzeća</string>
    <string name="default_plates">Podrazumijevani broj registarskih tablica</string>

    <string name="zone0">Zona 0</string>
    <string name="zone1">Zona 1</string>
    <string name="zone2">Zona 2</string>
    <string name="about_app_value">Aplikacija SPARK je rezultat urađenog projekta iz predmeta Projektovanje Softvera, omogućava korisniku da lakše pronađe slobodno parking mjesto kao i da mu prikaže mnoštvo korisnih informacija o parkinzima u Banja Luci \n \n
        Verzija:1.0</string>
    <string name="how_to_use_value">1.Kao korisnik ove aplikacije potrebno je prvo da odaberete destinaciju, kako bi vam aplikacija mogla prikazati informacije o parking mjestima u krugu od 500 metara \n
        2.odaberite parking, potom je potebno da unesete registarske tablice, vrijeme na koje se parking placa \n
        3.nakon toga pritisnite posalji</string>

    <string name="error_info_value">Prijavite grešku</string>
    <string name="glavne_aktivnosti">Glavne aktivnosti</string>

    <string name="plates_button_text">TABLICE</string>
    <string name="plates_limit" translatable="false">12</string>
    <string name="description_limit" translatable="false">20</string>
    <string name="plate_hint" translatable="false">E65A369</string>
    <string name="plates_limit_text" translatable="false">%1$d / %2$s</string>
    <string name="description_limit_text" translatable="false">%1$d / %2$s</string>
    <string name="description_hint">Opis (neobavezno)</string>
    <string name="add_button_text">DODAJ</string>
    <string name="special_letter1_plate" translatable="false">Ž</string>
    <string name="special_letter2_plate" translatable="false">Š</string>
    <string name="special_letter3_plate" translatable="false">Đ</string>
    <string name="special_letter4_plate" translatable="false">Č</string>
    <string name="special_letter5_plate" translatable="false">Ć</string>
    <string name="empty_plate_input">Ne može biti prazno</string>
    <string name="add_plate">Dodaj tablice</string>
    <string name="cancel">Otkaži</string>
    <string name="plate_delete">Brisanje tablica?</string>
    <string name="plate_delete_msg">Da li ste sigurni da želite izbrisati ove tablice?</string>
    <string name="delete">Izbriši</string>
    <string name="plates">Tablice</string>
    <string name="exit_msg">Pritisnite još jednom da bi ste zatvorili aplikaciju!</string>

</resources>
