<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/period_radio_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RadioButton
            android:id="@+id/extend1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_5min" />

        <RadioButton
            android:id="@+id/extend2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_10min" />

        <RadioButton
            android:id="@+id/extend3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_15min" />

        <RadioButton
            android:id="@+id/extend4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_20min" />

        <RadioButton
            android:id="@+id/extend5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_30min" />
    </RadioGroup>
</LinearLayout>