<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/profile_string">

        <ListPreference
            app:defaultValue="true"
            app:entries="@array/choose_parking"
            app:entryValues="@array/choose_period"
            app:icon="@drawable/ic_map_black_24dp"
            app:key="parking"
            app:title="@string/default_parking"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:defaultValue="30min"
            app:entries="@array/choose_period"
            app:entryValues="@array/choose_period"
            app:icon="@drawable/ic_access_time_black_24dp"
            app:key="period"
            app:title="@string/default_duration"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:defaultValue="true"
            android:key="registry_number"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/default_plates" />
    </PreferenceCategory>

</PreferenceScreen>