<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="200dp"
    android:layout_height="100dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp">

        <ImageView
            android:id="@+id/icon_parking"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="6dp"
            android:contentDescription="TODO" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_ocupation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/icon_parking"
            android:text="@string/parking_load"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_ocupation"
            android:layout_toRightOf="@+id/icon_parking"
            android:text="@string/parking_name"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_zone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_name"
            android:layout_toRightOf="@+id/icon_parking"
            android:text="@string/zone_title"
            android:textSize="12sp" />

        <Button
            android:id="@+id/tv_select"
            android:layout_width="45dp"
            android:layout_height="36dp"
            android:layout_below="@+id/tv_zone"
            android:layout_marginLeft="136dp"
            android:layout_marginTop="4dp"
            android:foreground="@drawable/ic_check_black_12dp"
            android:foregroundGravity="center" />


    </RelativeLayout>
</androidx.cardview.widget.CardView>
